Phase 2: Public changelog page, RSS feed, db-init script
- Add public changelog page at /<slug>/changelog with filterable feed
- Add RSS feed endpoint at /<slug>/rss with proper XML output
- Add 404 page for missing changelogs
- Add database initialization script (npm run db:init)
- Update README with full project docs and quickstart
- Update .env.example with all required vars
- All routes compile clean (tsc --noEmit passes)

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-# GitHub OAuth App credentials
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
+# ShipLog — Environment Variables
+# Copy to .env.local and fill in your values
 
-# OpenAI API key for PR categorization
-OPENAI_API_KEY=your_openai_api_key
+# GitHub OAuth App
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
-# App URL (for OAuth callbacks)
+# OpenAI (for PR categorization)
+OPENAI_API_KEY=
+
+# App URL (used for OAuth callbacks and public links)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Session secret (generate a random string)
-SESSION_SECRET=your_session_secret_min_32_chars_long
-
-# GitHub webhook secret
-GITHUB_WEBHOOK_SECRET=your_webhook_secret
+# Session encryption secret (generate with: openssl rand -hex 32)
+SESSION_SECRET=
