--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Session encryption secret (generate with: openssl rand -hex 32)
 SESSION_SECRET=
+
+# Database — Turso (production) or local SQLite file (development)
+# For local dev: file:data/shiplog.db (default if unset)
+# For Turso: libsql://your-db-name-your-org.turso.io
+TURSO_DATABASE_URL=
+TURSO_AUTH_TOKEN=
