--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "db:init": "tsx src/lib/db-init.ts"
   },
   "dependencies": {
-    "better-sqlite3": "^11.7.0",
+    "@libsql/client": "^0.17.0",
+    "marked": "^15.0.4",
     "next": "^14.2.21",
     "openai": "^4.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rss": "^1.2.2",
-    "marked": "^15.0.4"
+    "rss": "^1.2.2"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
