--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "openai": "^4.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "stripe": "^20.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
