--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@libsql/client": "^0.17.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "marked": "^15.0.4",
     "next": "^14.2.21",
     "openai": "^4.77.0",
